--- a/layouts/shortcodes/newtimelineItem.html
+++ b/layouts/shortcodes/newtimelineItem.html
@@ -6,7 +6,7 @@
 <li class="list-none">
   <div class="flex flex-start">
     <div class="bg-primary-500 dark:bg-primary-300 text-neutral-50 dark:text-neutral-700 min-w-[30px] h-8 text-2xl flex items-center justify-center rounded-full -ml-12 mt-5">
-      {{ partial "icon" $icon }}
+      {{ partial "icon.html" $icon }}
     </div>
     <div class="block p-6 rounded-lg shadow-2xl min-w-full ml-6 mb-10 backdrop-blur">
       <div class="flex flex-wrap justify-between">
@@ -23,7 +23,7 @@
         {{ end }}
         {{ if $badge }}
         <h3 class="mt-0">
-          {{ partial "badge"  $badge}}
+          {{ partial "badge.html"  $badge}}
         </h3>
         {{ end }}
       </div>
