update for deployment

--- a/layouts/shortcodes/newtimelineItem.html
+++ b/layouts/shortcodes/newtimelineItem.html
@@ -13,7 +13,7 @@
         {{ if eq $header "work" }}
         <img src="img/amd.jpeg" class="grid-w60" />
         {{ else if eq $header "upenn" }}
-        <img src="img/Upenn-logo.png" class="grid-w60" />
+        <img src="img/upenn-logo.png" class="grid-w60" />
         {{ else if eq $header "shanghaitech" }}
         <img src="img/shanghaitech.svg" class="grid-w60" />
         {{ else }}
